terraform/001-repo-blueprints/the-standard/virtual_networks.tf
resource "azurerm_virtual_network" "vnet_main_network_prod_uat" {
  name                = "vn-${var.name}-net"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}
